--- a/StoreApp/App.config
+++ b/StoreApp/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <add name="myConn" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StoreDBase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"/>
+  </connectionStrings>
 </configuration>
