--- a/StoreApp/App.config
+++ b/StoreApp/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="myConn" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StoreDBase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"/>
+    <add name="myConn" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StoreDBase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"></add>
   </connectionStrings>
 </configuration>
